--- a/finalproject/css/products.css
+++ b/finalproject/css/products.css
@@ -60,16 +60,17 @@ nav img{
   position: absolute;
   color: #fff;
   top: 0;
-  right: 0;
-  margin-right: 43.6%;
+  text-align: center;
+  min-width: 18px;
+  margin-left: 11%;
   margin-top: 33%;
   font-size: 11px;
+  cursor: pointer;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  cursor: pointer;
 }
 .cart{
   position: fixed;
